# MyceliumVR

./: Cargo.toml  FUTURE_IMPROVEMENTS.md  README.md  build.rs  wkg.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yaml
assets/mods/: guest_wit_example.wasm
crates/bevy_openxr/: Cargo.toml
crates/bevy_xr/: Cargo.toml
crates/bevy_xr_utils/: Cargo.toml
crates/guest_wit_example/: Cargo.toml
crates/guest_wit_example/src/: lib.rs
crates/sample/: debug.wat  guest_wit_example.wat  logic.embed.wasm  metadata.wasm
crates/sample/wit/: guest.wit
crates/test_module/: Cargo.toml
crates/test_module/src/: bindings.rs  lib.rs
crates/test_module/wit/: world.wit
crates/wats/: cargo.toml
crates/wats/src/: ast.rs  lexer.rs  main.rs  parser.rs
src/: app_mode.rs  components.rs  main.rs
src/journal/: action.rs  apply.rs  descriptor.rs  entity_id.rs  mod.rs  plugin.rs  save_load.rs  world.rs
src/oxr/: action_binding.rs  action_set_attaching.rs  action_set_syncing.rs  error.rs  exts.rs  graphics.rs  init.rs  layer_builder.rs  mirror_blit.rs  mirror_blit.wgsl  mod.rs  poll_events.rs  reference_space.rs  render.rs  resources.rs  session.rs  spaces.rs  types.rs
src/oxr/features/: fb_passthrough.rs  handtracking.rs  mod.rs  overlay.rs
src/oxr/graphics/: vulkan.rs
src/xr/: camera.rs  hand_debug_gizmos.rs  hands.rs  mod.rs  session.rs  spaces.rs
src/xr_utils/: actions.rs  mndx_xdev_spaces_trackers.rs  mod.rs  tracking_utils.rs  transform_utils.rs
wit/: components.wit
