[package]
name = "MyceliumVR"
version = "0.1.0"
edition = "2024"
authors = ["Niklas Eicker <git@nikl.me>"]
publish = false
exclude = ["dist", "build", "assets", "credits"]
build = "build.rs"

[workspace]
members = [
    "crates/guest_wit_example",
    "crates/wats"
, "crates/test_module"]
resolver = "2"

[workspace.dependencies]
# These MUST stay here so your sub-crates can inherit them
bevy = { version = "0.18.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
wit-bindgen = { version = "0.50.0", features = ["bitflags"] }
wasvy = "0.0.7"
wasvy_macros = "0.0.7"
openxr = "0.21.1"
thiserror = "2.0.3"
wgpu = "27"
wgpu-hal = "27"
bevy_ecs = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_render = { version = "0.18", default-features = false }
bevy_core_pipeline = { version = "0.18", default-features = false }
bevy_window = { version = "0.18", default-features = false }
bevy_winit = { version = "0.18", default-features = false }
bevy_pbr = { version = "0.18", default-features = false }
bevy_app = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_log = { version = "0.18", default-features = false }
bevy_gizmos = { version = "0.18", default-features = false }
bevy_camera = { version = "0.18", default-features = false }
bevy_color = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18", default-features = false }
bevy_platform = { version = "0.18", default-features = false }
bevy_mod_xr = { path = "crates/bevy_xr", version = "0.5.0" }
bevy_mod_openxr = { path = "crates/bevy_openxr", version = "0.5.0" }
bevy_xr_utils = { path = "crates/bevy_xr_utils", version = "0.5.0" }

[dependencies]
# The main Bevy engine
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app", "2d_api", "2d_bevy_render", "3d_api", "3d_bevy_render",
    "ui_api", "ui_bevy_render", "scene", "picking", "bevy_gilrs",
    "bevy_winit", "bevy_log", "default_font", "multi_threaded",
    "webgl2", "x11", "wayland", "sysinfo_plugin"
] }

# These specific crates help the compiler find "bevy_reflect" etc. in your .rs files
bevy_ecs = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_render = { version = "0.18", default-features = false }
bevy_core_pipeline = { version = "0.18", default-features = false }
bevy_window = { version = "0.18", default-features = false }
bevy_winit = { version = "0.18", default-features = false }
bevy_pbr = { version = "0.18", default-features = false }
bevy_app = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_log = { version = "0.18", default-features = false }
bevy_gizmos = { version = "0.18", default-features = false }
bevy_camera = { version = "0.18", default-features = false }
bevy_color = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18", default-features = false }
bevy_platform = { version = "0.18", default-features = false }
bevy_asset = { version = "0.18", default-features = false }

openxr = "0.21.1"
thiserror = "2.0.3"
wgpu = "27"
wgpu-hal = "27"

# External dependencies
bevy_kira_audio = { version = "0.25", features = ["android_shared_stdcxx"] }
bevy_asset_loader = "0.25.0"
rand = "0.9"
webbrowser = { version = "1", features = ["hardened"] }
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
wasmtime = { version = "40.0.1", features = ["component-model"] }
wasmtime-wasi = "40.0.1"
serde_json = "1.0.149"
wit-bindgen = "0.50.0"
wasvy = "0.0.7"
bevy_mod_xr = { path = "crates/bevy_xr", version = "0.5.0" }
bevy_mod_openxr = { path = "crates/bevy_openxr", version = "0.5.0" }
bevy_xr_utils = { path = "crates/bevy_xr_utils", version = "0.5.0" }

[build-dependencies]
embed-resource = "1"
bevy_app = "0.18.0"
bevy_ecs = "0.18.0"
bevy_reflect = "0.18.0"
wasvy = "0.0.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = ["bevy/dynamic_linking"]
