[package]
name = "bevy_mod_xr"
description = "semi generic Xr Api for Community Driven XR in Bevy"
version = "0.5.0"
edition = "2024"
license = "MIT/Apache-2.0"
keywords = ["gamedev", "bevy", "Xr", "Vr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["gizmos"]
gizmos = ["dep:bevy_gizmos", "dep:bevy_color"]
reflect = ["dep:bevy_reflect"]

[dependencies]
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_render.workspace = true
bevy_app.workspace = true
bevy_reflect = { workspace = true, optional = true }
bevy_log.workspace = true
bevy_gizmos = { workspace = true, optional = true }
bevy_color = { workspace = true, optional = true }
bevy_transform.workspace = true
bevy_camera.workspace = true
bevy_derive.workspace = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
