[package]
name = "test_module"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:test-module"


[package.metadata.component.dependencies]
"game:component" = {path = "./wit/deps/component.wit"}